# macrogym

./: .gitignore  README.md  pyproject.toml
examples/: quickstart.py
macrogym/: __init__.py  economy.py  metrics.py  shocks.py  transitions.py
tests/: test_economy.py
